kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5tts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f5tts-api
  template:
    metadata:
      labels:
        app: f5tts-api
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      nodeSelector:
        accelerator: a30
      containers:
        - name: api
          image: ghcr.io/aihpi/f5-tts-optim:latest
          imagePullPolicy: IfNotPresent
          command:
            - python3
            - -m
            - uvicorn
            - f5_tts.demo.server:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          ports:
            - containerPort: 8000
          resources:
            limits:
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: model-volume
              mountPath: /var/tmp/
      volumes:
        - name: model-volume
          persistentVolumeClaim:
            claimName: f5tts-model-pvc
