kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5tts-api
spec:
  type: NodePort
  selector:
    app: f5tts-api
  ports:
    - port: 8004
      targetPort: 8000
      protocol: TCP
      nodePort: 31493
