kubernetes/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f5tts-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: tts.aisc.hpi.de
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: f5tts-api
                port:
                  number: 8004
